5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3995/executions/1592_2425.log
== TEST (2019-03-25 14:59:04) 
-- CODE:
var1=int(input("distância:"))
var2=int(input("combustível gasto:"))
var3=var1/var2
print(round(var3 "Km/l"))
-- ERROR:
File "XXXX", line 4
    print(round(var3 "Km/l"))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:59:29) 
-- CODE:
var1=int(input("distância:"))
var2=int(input("combustível gasto:"))
var3=var1/var2
print(round(var3, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var1=int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:59:35) 
-- CODE:
var1=int(input("distância:"))
var2=int(input("combustível gasto:"))
var3=var1/var2
print(round(var3, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var1=int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:00:11) 
-- CODE:
var1=input("distância:"))
var2=input("combustível gasto:"))
var3=var1/var2
-- ERROR:
File "XXXX", line 1
    var1=input())
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:00:16) 
-- CODE:
var1=input("distância:")
var2=input("combustível gasto:")
var3=var1/var2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    var3=var1/var2
TypeError: unsupported operand type(s) for /: 'str' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:01:13) 
-- CODE:
var1=float(input("distância:"))
var2=float(input("combustível gasto:"))
var3=var1/var2
print(round(var3, 3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:01:50) 
-- CODE:
var1=float(input("distância:"))
var2=float(input("combustível gasto:"))
var3=var1/var2
print(round(var3, 3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:01:51) 
-- CODE:
var1=float(input("distância:"))
var2=float(input("combustível gasto:"))
var3=var1/var2
print(round(var3, 3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:01:52) 
-- CODE:
var1=float(input("distância:"))
var2=float(input("combustível gasto:"))
var3=var1/var2
print(round(var3, 3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:02:00) 
-- CODE:
var1=float(input("distância:"))
var2=float(input("combustível gasto:"))
var3=var1/var2
print(round(var3, 3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:02:00) 
-- CODE:
var1=float(input("distância:"))
var2=float(input("combustível gasto:"))
var3=var1/var2
print(round(var3, 3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:02:41) 
-- CODE:
var1=float(input("distância:"))
var2=float(input("combustível gasto:"))
var3=var1/var2
print(round(var3, 3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:02:42) 
-- CODE:
var1=float(input("distância:"))
var2=float(input("combustível gasto:"))
var3=var1/var2
print(round(var3, 3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:02:43) 
-- CODE:
var1=float(input("distância:"))
var2=float(input("combustível gasto:"))
var3=var1/var2
print(round(var3, 3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:02:51) 
-- CODE:
var1=float(input("distância:"))
var2=float(input("combustível gasto:"))
var3=var1/var2
print(round(var3, 3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:03:47) 
-- CODE:
Km=float(input("distância:"))
L=float(input("combustível gasto:"))
var3=Km/l
print(round(var3, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    var3=Km/l
NameError: name 'l' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:03:48) 
-- CODE:
Km=float(input("distância:"))
L=float(input("combustível gasto:"))
var3=Km/l
print(round(var3, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    var3=Km/l
NameError: name 'l' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:03:48) 
-- CODE:
Km=float(input("distância:"))
L=float(input("combustível gasto:"))
var3=Km/l
print(round(var3, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    var3=Km/l
NameError: name 'l' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:03:49) 
-- CODE:
Km=float(input("distância:"))
L=float(input("combustível gasto:"))
var3=Km/l
print(round(var3, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    var3=Km/l
NameError: name 'l' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:04:14) 
-- CODE:
Km=float(input("distância:"))
L=float(input("combustível gasto:"))
var3=Km/L
print(round(var3, 3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:04:35) 
-- CODE:

Km=float(input("distância:"))
L=float(input("combustível gasto:"))
var3=Km/L
print(round(var3, 3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:05:15) 
-- CODE:
Km=float(input("distância:"))
L=float(input("combustível gasto:"))
var3=Km/L
print(round(var3, 3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:05:16) 
-- CODE:
Km=float(input("distância:"))
L=float(input("combustível gasto:"))
var3=Km/L
print(round(var3, 3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:06:34) 
-- CODE:
Km=float(input("distancia:"))
L=float(input("combustivel gasto:"))
var3=Km/L
print(round(var3, 3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:06:56) 
-- CODE:
Km=float(input("distancia:"))
L=float(input("combustivel gasto:"))
var3=Km/L
print(round(var3, 3 km/l))
-- ERROR:
File "XXXX", line 4
    print(round(var3, 3 km/l))
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:07:04) 
-- CODE:
Km=float(input("distancia:"))
L=float(input("combustivel gasto:"))
var3=Km/L
print(round(var3, 3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:07:27) 
-- CODE:
Km=float(input("distancia:"))
L=float(input("combustivel gasto:"))
var3=Km/L
print(round(var3, 3)"km/l")
-- ERROR:
File "XXXX", line 4
    print(round(var3, 3)"km/l")
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:08:04) 
-- CODE:
Km=float(input("distancia:"))
L=float(input("combustivel gasto:"))
var3=Km/L
print((round(var3, 3))"km/l)"
-- ERROR:
File "XXXX", line 4
    print((round(var3, 3))"km/l)"
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:08:11) 
-- CODE:
Km=float(input("distancia:"))
L=float(input("combustivel gasto:"))
var3=Km/L
print((round(var3, 3))"km/l")
-- ERROR:
File "XXXX", line 4
    print((round(var3, 3))"km/l")
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:08:13) 
-- CODE:
Km=float(input("distancia:"))
L=float(input("combustivel gasto:"))
var3=Km/L
print((round(var3, 3))"km/l")
-- EXECUTION TIME:
0.156067
-- ERROR:
  File "/home/codebench/codes/1592/2425/main.py", line 4
    print((round(var3, 3))"km/l")
                               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:08:57) 
-- CODE:
Km=float(input("distancia:"))
L=float(input("combustivel gasto:"))
var3=Km/L
print(round(var3, 3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:10:05) 
-- CODE:
Km=float(input("distancia:"))
L=float(input("combustivel gasto:"))
var3=Km/L(km/l)
print(round(var3, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    var3=Km/L(km/l)
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:10:09) 
-- CODE:
Km=float(input("distancia:"))
L=float(input("combustivel gasto:"))
var3=Km/L(km/l)
print(round(var3, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    var3=Km/L(km/l)
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:10:12) 
-- CODE:
Km=float(input("distancia:"))
L=float(input("combustivel gasto:"))
var3=Km/L(km/l)
print(round(var3, 3))
-- EXECUTION TIME:
0.192573
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/2425/main.py", line 3, in <module>
    var3=Km/L(km/l)
NameError: name 'km' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:10:12) 
-- CODE:
Km=float(input("distancia:"))
L=float(input("combustivel gasto:"))
var3=Km/L(km/l)
print(round(var3, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    var3=Km/L(km/l)
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:10:18) 
-- CODE:
Km=float(input("distancia:"))
L=float(input("combustivel gasto:"))
var3=Km/L(km/l)
print(round(var3, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    var3=Km/L(km/l)
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:10:39) 
-- CODE:
Km=float(input("distancia:"))
L=float(input("combustivel gasto:"))
var3=Km/L("km/l")
print(round(var3, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    var3=Km/L("km/l")
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:10:55) 
-- CODE:
Km=float(input("distancia:"))
L=float(input("combustivel gasto:"))
var3=Km/L float("km/l")
print(round(var3, 3))
-- ERROR:
File "XXXX", line 3
    var3=Km/L float("km/l")
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:13:16) 
-- CODE:
Km=float(input("distancia:"))
L=float(input("combustivel gasto:"))
var3=Km/L
var4=km/l
print(round(var3, 3 var4))
-- ERROR:
File "XXXX", line 5
    print(round(var3, 3 var4))
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:13:51) 
-- CODE:
Km=float(input("distancia:"))
L=float(input("combustivel gasto:"))
var3=Km/L
var4=km/l
print(round(var3, 3))
print(var4)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var4=km/l
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:15:11) 
-- CODE:
a=float(input("distancia:"))
b=float(input("combustivel gasto:"))
var3=a/b
print(round(var3, 3)+"km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(var3, 3)+"km/l")
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:15:28) 
-- CODE:
a=float(input("distancia:"))
b=float(input("combustivel gasto:"))
var3=a/b
print(round(var3, 3),"km/l")
-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:15:40) 
-- CODE:
a=float(input("distancia:"))
b=float(input("combustivel gasto:"))
var3=a/b
print(round(var3, 3),"km/l")
-- EXECUTION TIME:
0.229863
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
